--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,9 +24,11 @@ repositories { mavenCentral() }
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile files('libs/Parse-1.10.2.jar')
-    compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'com.google.android.gms:play-services:6.1.71'
     compile 'com.parse.bolts:bolts-android:1.1.4'
     compile 'com.facebook.android:facebook-android-sdk:4.0.0'
     compile files('libs/ParseFacebookUtilsV4-1.10.2.jar')
+    compile 'com.android.support:appcompat-v7:22.0.0'
+    compile 'com.android.support:recyclerview-v7:21.0.0'
+    compile 'com.jakewharton:butterknife:6.1.0'
 }
