--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+
     <permission
         android:name="com.example.vipul.splash.permission.MAPS_RECEIVE"
         android:protectionLevel="signature" />
@@ -33,7 +34,6 @@
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true" />
-
 
     <!--
       IMPORTANT: Change "com.parse.starter.permission.C2D_MESSAGE" in the lines below
@@ -64,7 +64,8 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme1" >
         </activity>
         <activity
             android:name=".LoginOrSignup"
@@ -78,7 +79,6 @@
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
-
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyA7XQ8b1_mc3Udjy-WagoTJ_tYR9bXYQDg" />
@@ -118,11 +118,32 @@
 
         <activity
             android:name=".friend_list"
-            android:label="@string/title_activity_friend_list" >
+            android:label="@string/title_activity_friend_list"
+            android:theme="@style/AppTheme1">
         </activity>
         <activity
             android:name=".chat_item"
             android:label="@string/title_activity_chat_item" >
+        </activity>
+        <activity
+            android:name=".item_row"
+            android:label="@string/title_activity_item_row" >
+        </activity>
+        <activity
+            android:name=".header"
+            android:label="@string/title_activity_header" >
+        </activity>
+        <activity
+            android:name=".Tool_bar"
+            android:label="@string/title_activity_tool_bar" >
+        </activity>
+        <activity
+            android:name=".MainActivity2Activity"
+            android:label="@string/title_activity_main_activity2" >
+        </activity>
+        <activity
+            android:name=".DrawerHeader"
+            android:label="@string/title_activity_drawer_header" >
         </activity>
     </application>
 
