modified:   app/src/main/AndroidManifest.xml 	modified:   app/src/main/java/com/example/vipul/splash/DrawerAdapter.java 	new file:   app/src/main/java/com/example/vipul/splash/EventDetails.java 	modified:   app/src/main/java/com/example/vipul/splash/EventPage.java 	new file:   app/src/main/java/com/example/vipul/splash/EventView.java 	modified:   app/src/main/java/com/example/vipul/splash/MainActivity.java 	new file:   app/src/main/java/com/example/vipul/splash/MapMe.java 	modified:   app/src/main/java/com/example/vipul/splash/friend_list.java 	modified:   app/src/main/res/layout/activity_chat_item.xml 	new file:   app/src/main/res/layout/activity_event_details.xml 	modified:   app/src/main/res/layout/activity_event_page.xml 	new file:   app/src/main/res/layout/activity_event_view.xml 	modified:   app/src/main/res/layout/activity_friend_list.xml 	new file:   app/src/main/res/layout/activity_map_me.xml 	new file:   app/src/main/res/menu/menu_event_details.xml 	new file:   app/src/main/res/menu/menu_event_view.xml 	new file:   app/src/main/res/menu/menu_map_me.xml 	modified:   app/src/main/res/values/colors.xml 	modified:   app/src/main/res/values/strings.xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -130,24 +130,24 @@
             android:label="@string/title_activity_item_row" >
         </activity>
         <activity
-            android:name=".header"
-            android:label="@string/title_activity_header" >
-        </activity>
-        <activity
-            android:name=".Tool_bar"
-            android:label="@string/title_activity_tool_bar" >
-        </activity>
-        <activity
-            android:name=".MainActivity2Activity"
-            android:label="@string/title_activity_main_activity2" >
-        </activity>
-        <activity
-            android:name=".DrawerHeader"
-            android:label="@string/title_activity_drawer_header" >
-        </activity>
-        <activity
             android:name=".EventPage"
-            android:label="@string/title_activity_event_page" >
+            android:label="@string/title_activity_event_page"
+            android:theme="@style/AppTheme1" >
+        </activity>
+        <activity
+            android:name=".MapMe"
+            android:label="@string/title_activity_map_me"
+            android:theme="@style/AppTheme1" >
+        </activity>
+        <activity
+            android:name=".EventView"
+            android:label="@string/title_activity_event_view"
+            android:theme="@style/AppTheme1">
+        </activity>
+        <activity
+            android:name=".EventDetails"
+            android:label="@string/title_activity_event_details"
+            android:theme="@style/AppTheme1" >
         </activity>
     </application>
 
