modified:   app/src/main/AndroidManifest.xml 	new file:   app/src/main/assets/fontawesome-webfont.ttf 	modified:   app/src/main/java/com/example/vipul/splash/EventDetails.java 	modified:   app/src/main/java/com/example/vipul/splash/EventPage.java 	new file:   app/src/main/java/com/example/vipul/splash/addmem.java 	new file:   app/src/main/res/layout/activity_addmem.xml 	modified:   app/src/main/res/layout/activity_event_page.xml 	modified:   app/src/main/res/layout/activity_item_row.xml 	new file:   app/src/main/res/layout/member_list.xml 	new file:   app/src/main/res/menu/menu_addmem.xml 	modified:   app/src/main/res/menu/menu_event_details.xml 	new file:   app/src/main/res/menu/selected_item.xml 	modified:   app/src/main/res/values/strings.xml 	modified:   app/src/main/res/values/styles.xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -142,12 +142,16 @@
         <activity
             android:name=".EventView"
             android:label="@string/title_activity_event_view"
-            android:theme="@style/AppTheme1">
+            android:theme="@style/AppTheme1" >
         </activity>
         <activity
             android:name=".EventDetails"
             android:label="@string/title_activity_event_details"
             android:theme="@style/AppTheme1" >
+        </activity>
+        <activity
+            android:name=".addmem"
+            android:label="@string/title_activity_addmem" >
         </activity>
     </application>
 
