modified:   app/app.iml 	modified:   app/build.gradle 	modified:   app/src/main/AndroidManifest.xml 	new file:   app/src/main/java/com/example/vipul/splash/DirectionsJSONParser.java 	modified:   app/src/main/java/com/example/vipul/splash/EventDetails.java 	modified:   app/src/main/java/com/example/vipul/splash/EventPage.java 	modified:   app/src/main/java/com/example/vipul/splash/EventView.java 	new file:   app/src/main/java/com/example/vipul/splash/GetDirections.java 	modified:   app/src/main/java/com/example/vipul/splash/MapMe.java 	modified:   app/src/main/java/com/example/vipul/splash/friend_list.java 	new file:   app/src/main/java/com/example/vipul/splash/invites.java 	new file:   app/src/main/java/com/example/vipul/splash/slider.java 	new file:   app/src/main/res/drawable/card.xml 	modified:   app/src/main/res/layout/activity_event_details.xml 	modified:   app/src/main/res/layout/activity_event_page.xml 	modified:   app/src/main/res/layout/activity_event_view.xml 	new file:   app/src/main/res/layout/activity_get_directions.xml 	new file:   app/src/main/res/layout/activity_invites.xml 	new file:   app/src/main/res/layout/activity_slider.xml 	modified:   app/src/main/res/layout/event_row.xml 	new file:   app/src/main/res/layout/invite_row_new.xml 	new file:   app/src/main/res/menu/menu_get_directions.xml 	new file:   app/src/main/res/menu/menu_invites.xml 	new file:   app/src/main/res/menu/menu_slider.xml 	modified:   app/src/main/res/menu/selected_item.xml 	modified:   app/src/main/res/values/colors.xml modified:   app/src/main/res/values/strings.xml 	modified:   app/src/main/res/values/styles.xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,8 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <uses-permission android:name="android.permission.READ_CALENDAR" />
+    <uses-permission android:name="android.permission.WRITE_CALENDAR" />
 
     <permission
         android:name="com.example.vipul.splash.permission.MAPS_RECEIVE"
@@ -152,6 +154,19 @@
         <activity
             android:name=".addmem"
             android:label="@string/title_activity_addmem" >
+        </activity>
+        <activity
+            android:name=".slider"
+            android:label="@string/title_activity_slider"
+            android:theme="@style/AppTheme1" >
+        </activity>
+        <activity
+            android:name=".invites"
+            android:label="@string/title_activity_invites" >
+        </activity>
+        <activity
+            android:name=".GetDirections"
+            android:label="@string/title_activity_get_directions" >
         </activity>
     </application>
 
