--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <uses-permission android:name="android.permission.READ_CALENDAR" />
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
+    <uses-permission android:name="android.permission.SEND_SMS" />
 
     <permission
         android:name="com.example.vipul.splash.permission.MAPS_RECEIVE"
@@ -78,6 +79,9 @@
             android:label="@string/title_activity_login" >
         </activity>
 
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
@@ -162,11 +166,43 @@
         </activity>
         <activity
             android:name=".invites"
-            android:label="@string/title_activity_invites" >
+            android:label="@string/title_activity_invites"
+            android:theme="@style/AppTheme1" >
         </activity>
         <activity
             android:name=".GetDirections"
-            android:label="@string/title_activity_get_directions" >
+            android:label="@string/title_activity_get_directions"
+            android:theme="@style/AppTheme1" >
+        </activity>
+        <activity
+            android:name=".facebook"
+            android:label="@string/title_activity_facebook"
+            android:theme="@style/AppTheme1" >
+        </activity>
+        <activity
+            android:name="com.facebook.FacebookActivity"
+            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+        <activity
+            android:name=".group"
+            android:label="@string/title_activity_group"
+            android:theme="@style/AppTheme1" >
+        </activity>
+        <activity
+            android:name=".Events"
+            android:label="@string/title_activity_events"
+            android:theme="@style/AppTheme1" >
+        </activity>
+        <activity
+            android:name=".Live_loc"
+            android:label="@string/title_activity_live_loc"
+            android:theme="@style/AppTheme1" >
+        </activity>
+        <activity
+            android:name=".EmergencyContact"
+            android:label="@string/title_activity_emergency_contact"
+            android:theme="@style/AppTheme1" >
         </activity>
     </application>
 
