--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,8 @@
     <uses-permission android:name="android.permission.READ_CALENDAR" />
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
     <uses-permission android:name="android.permission.SEND_SMS" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+
 
     <permission
         android:name="com.example.vipul.splash.permission.MAPS_RECEIVE"
@@ -204,6 +206,9 @@
             android:label="@string/title_activity_emergency_contact"
             android:theme="@style/AppTheme1" >
         </activity>
+
+        <service android:name="com.example.vipul.splash.ChatHeadService" >
+        </service>
     </application>
 
 </manifest>
