--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -78,7 +78,9 @@
         </activity>
         <activity
             android:name=".Login"
-            android:label="@string/title_activity_login" >
+            android:label="@string/title_activity_login"
+            android:theme="@style/AppTheme1"
+            android:windowSoftInputMode="stateHidden">
         </activity>
 
         <meta-data
@@ -93,7 +95,9 @@
 
         <activity
             android:name=".Signup"
-            android:label="@string/title_activity_signup" >
+            android:label="@string/title_activity_signup"
+            android:theme="@style/AppTheme1"
+            android:windowSoftInputMode="stateHidden">
         </activity>
         <activity
             android:name=".dispatch"
